@@ -1,0 +1,5 @@
+import xbmc
+import sys
+
+if __name__ == '__main__':
+    xbmc.executebuiltin("ActivateWindow(1132)")
